--- a/files/web.config
+++ b/files/web.config
@@ -11,11 +11,10 @@
             <rules>
                 <rule name="Images" stopProcessing="true">
                     <match url="\.png|\.jpeg|\.jpg|\.webp" />
-                    <action type="Rewrite"  url="index.js" />
+                    <action type="Rewrite"  url="www/index.js" />
                 </rule>
 
-                <rule name="AppContent"  stopProcessing="true">
-                    <match url="^app" />
+                <rule name="AppContent" stopProcessing="true">
                     <action type="Rewrite" url="client{REQUEST_URI}" />
                 </rule>
             </rules>
