--- a/files/web.config
+++ b/files/web.config
@@ -14,7 +14,7 @@
                     <action type="Rewrite"  url="www/index.js" />
                 </rule>
 
-                <rule name="AppContent" stopProcessing="true">
+                <rule name="AppContent" >
                     <action type="Rewrite" url="client{REQUEST_URI}" />
                 </rule>
             </rules>
