--- a/files/web.config
+++ b/files/web.config
@@ -17,6 +17,9 @@
                 <rule name="AppContent" >
                     <action type="Rewrite" url="client{REQUEST_URI}" />
                 </rule>
+
+                <!--RULES-->
+
             </rules>
         </rewrite>
         <security>
