--- a/files/web.config
+++ b/files/web.config
@@ -10,7 +10,7 @@
         <rewrite>
             <rules>
                 <rule name="Images" stopProcessing="true">
-                    <match url="\.png|\.jpeg|\.jpg|\.webp" />
+                    <match url="\.png|\.jpeg|\.jpg|\.webp|\.svg" />
                     <action type="Rewrite"  url="www/index.js" />
                 </rule>
 
